--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,14 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.ListTablesContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: center;
+}
