refactor: reorganize button layout for better structure

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,12 @@ td {
 input {
   background-color: #dcdcdc;
 }
+/* 
+.buttonsContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+} */
 
 @media only screen and (max-width: 480px) {
   .ListTablesContainer {
